--- a/Search_Names/Search_Names.csproj
+++ b/Search_Names/Search_Names.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="27.2.1" />
+    <PackageReference Include="LINQtoCSV" Version="1.5.0" />
     <PackageReference Include="LumenWorksCsvReader" Version="4.0.0" />
   </ItemGroup>
 
